# JAX-NTM

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.sh
Backbone/: NTM_graves2014.py
Backbones/: NTM_graves2014.py  Transformer.py  transformer.py
Common/: BackboneInterface.py  Checkpoint.py  ControllerInterface.py  MemoryInterface.py  TrainingInterfaces.py  checkpoint.py  common.py  globals.py
Controllers/: NTM_graves2014.py
Datasets/: addition.py  babi.py  copy.py
GUI/: app.py  config_options.py  parse_requests.py
GUI/static/: base.css  globals.css
GUI/static/components/: selector.css
GUI/static/inputs/: learning_rate.css  submit_button.css
GUI/static/pages/: base.css  index.css  models.css  training.css
GUI/templates/components/: backbone_selector.html  cirriculum_selector.html  dataset_selector.html  lstm_selector.html  memory_selector.html  model_guide.html  training_selector.html  transformer_selector.html
GUI/templates/inputs/: drop_down.html  float_entry.html  integer_entry.html  learning_rate.html  probability_entry.html  submit_button.html
GUI/templates/pages/: base.html  index.html  models.html  training.html
Machines/: NTM_graves2014.py
Memories/: LANTM_yang2017.py  MemoryInterface.py  NTM_graves2014.py
Models/: .NTM_graves2014.py.swp  NTM_graves2014.py
Training/: Curriculum_zaremba2014.py  NTM_graves2014.py  controller.py  training_loop.py
Training/Backbones/: NTM_graves2014.py  Transformer.py
Visualization/: MemoryWrappers.py  memory_visualization.py
utils/: loss_penalties.py
