[tool.poetry]
name = "neural-turing-machines"
version = "0.1.0"
description = ""
authors = ["leon <leonlenk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jax = [
    {platform = "win32", extras = ["cuda12"], version = "^0.4.29"},
    {platform = "linux", extras = ["cuda12"], version = "^0.4.29"}
]
jax-metal = {platform = "darwin", version = "^0.1.0"}
pre-commit = "^3.7.1"
flax = "^0.8.4"
torch = { version = "^2.3.1", source = "pytorch_cpu" }

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
