[tool.poetry]
name = "neural-turing-machines"
version = "0.1.0"
description = ""
authors = ["leon <leonlenk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jax = [
    {platform = "win32", extras = ["cuda12"], version = "^0.4.29"},
    {platform = "linux", extras = ["cuda12"], version = "^0.4.29"}
]
jax-metal = {platform = "darwin", version = "^0.1.0"}
pre-commit = "^3.7.1"
flax = "^0.8.4"
torch = [
    {platform = "win32", version = "^2.3.1", source = "pytorch_cpu" },
    {platform = "linux", version = "^2.3.1", source = "pytorch_cpu" },
    {platform = "darwin", url = "https://download.pytorch.org/whl/cpu/torch-2.3.1-cp312-none-macosx_11_0_arm64.whl"}
]
optax = "^0.2.2"
pillow = "^10.3.0"
wandb = "^0.17.2"
tqdm = "^4.66.4"
ruff = "^0.5.0"
isort = "^5.13.2"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["I001"]  # Ignore import sorting issues since isort will handle it

[tool.isort]
profile = "black"
line_length = 88